@@ -1,3 +1,7 @@
+- Convert newlines to spaces when grabbing the selection. If we think that
+  the selection is a URL (it starts with http: etc.), then we remove
+  spaces as well.
+
 * lookuplet-1.1 (2001-08-17)
 
 - Fixed support for running as an applet and made the code automatically
@@ -9,4 +13,4 @@
 
 - Initial release.
 
-$Id: NEWS,v 1.3 2001/08/18 02:39:36 mdb Exp $
+$Id: NEWS,v 1.4 2001/08/21 18:46:10 mdb Exp $
