@@ -1,3 +1,9 @@
+2001-08-21  Michael Bayne  <mdb@bering>
+
+	* src/querybox.c: Massage the selection somewhat by converting
+	newlines to spaces and if we believe that we're looking at a URL,
+	by removing spaces.
+
 2001-08-17  Michael Bayne  <mdb@bering>
 
 	* src/lookuplet.c: Got support for running as an applet working
